force-app/main/default/objects/amazonconnect__Call_Attributes_Configuration__mdt/amazonconnect__Call_Attributes_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Call Attributes Configuration</label>
    <pluralLabel>Call Attributes Configurations</pluralLabel>
</CustomObject>