force-app/main/default/objects/amazonconnect__Call_Attributes_Configuration__mdt/fields/amazonconnect__Attribute_Name__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Attribute_Name__c</fullName>
    <description>The name of the attribute as it is configured in Amazon Connect.</description>
    <inlineHelpText>Please provide the name of the attribute as it is configured in Amazon Connect&apos;s Call Flow.</inlineHelpText>
    <label>Amazon Connect Attribute Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>