force-app/main/default/objects/amazonconnect__Call_Attributes_Configuration__mdt/fields/amazonconnect__CCP_Attribute_Default_Value__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__CCP_Attribute_Default_Value__c</fullName>
    <label>Attribute Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>