force-app/main/default/objects/amazonconnect__Call_Attributes_Configuration__mdt/fields/amazonconnect__CCP_Attribute_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__CCP_Attribute_Display_Order__c</fullName>
    <label>Attribute Display Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>