force-app/main/default/objects/amazonconnect__Call_Attributes_Configuration__mdt/fields/amazonconnect__CCP_Attribute_FieldType__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__CCP_Attribute_FieldType__c</fullName>
    <label>Attribute Field Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>