force-app/main/default/objects/amazonconnect__Call_Attributes_Configuration__mdt/fields/amazonconnect__CCP_Attribute_Label__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__CCP_Attribute_Label__c</fullName>
    <description>The label to be used in the CCP display.</description>
    <inlineHelpText>Please provide the label for this attribute as it will be shown in the display within CCP. Ideally, the shorter the name the better it is.</inlineHelpText>
    <label>Attribute Label</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>