force-app/main/default/objects/amazonconnect__Call_Attributes_Configuration__mdt/fields/amazonconnect__CCP_Attribute_Name__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__CCP_Attribute_Name__c</fullName>
    <description>The name of the attribute as it is configured in Amazon Connect.</description>
    <inlineHelpText>Please provide the name of the attribute as it is configured in Amazon Connect&apos;s Call Flow.</inlineHelpText>
    <label>Attribute Name</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>