force-app/main/default/objects/amazonconnect__Call_Attributes_Configuration__mdt/fields/amazonconnect__CCP_Attribute_Section__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__CCP_Attribute_Section__c</fullName>
    <label>Attribute Section</label>
    <length>50</length>
    <type>Text</type>
</CustomField>