force-app/main/default/objects/amazonconnect__Call_Attributes_Configuration__mdt/fields/amazonconnect__CCP_Attribute_Style__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__CCP_Attribute_Style__c</fullName>
    <label>Attribute Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>